// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Most Watched Page A11y I can see the skip to content link 1`] = `"Aller au contenu"`;

exports[`AMP Most Watched Page AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP Most Watched Page AMP Geo config 1`] = `
Object {
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": Array [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Most Watched Page Analytics ATI 1`] = `
Object {
  "requests": Object {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=3&p=afrique.media.video.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x2=[amp]&x3=[news-afrique]&x4=[fr]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[list-datadriven]&x8=[simorgh]&x9=[Les%2Bplus%2Bvus%2B-%2BBBC%2BNews%2BAfrique]&ref=\${documentReferrer}",
  },
  "transport": Object {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": Object {
    "trackPageview": Object {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Most Watched Page Analytics chartbeat 1`] = `
Object {
  "vars": Object {
    "contentType": "Most Watched",
    "domain": "test.bbc.co.uk",
    "sections": "Afrique, Afrique - Most Watched",
    "title": "Les plus vus - BBC News Afrique",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Most Watched Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/afrique"`;

exports[`AMP Most Watched Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. La BBC n'est pas responsable du contenu des sites externes. Découvrez notre approche en matière de liens externes."`;

exports[`AMP Most Watched Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, Afrique",
  "url": "/afrique",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 2`] = `
Object {
  "text": "Pourquoi vous pouvez faire confiance à BBC News",
  "url": "https://www.bbc.com/afrique/institutionelles-49283281",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 3`] = `
Object {
  "text": "Conditions d'utilisation",
  "url": "https://www.bbc.com/afrique/institutionelles-36826639",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 4`] = `
Object {
  "text": "A propos de la BBC",
  "url": "https://www.bbc.com/afrique/institutionelles-36826641",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 5`] = `
Object {
  "text": "Politique de confidentialité",
  "url": "https://www.bbc.com/afrique/institutionelles-36826642",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 7`] = `
Object {
  "text": "Contactez la BBC",
  "url": "https://www.bbc.com/afrique/institutionelles-36826644",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`AMP Most Watched Page Footer Link should match text and url 9`] = `
Object {
  "text": "Découvrez notre approche en matière de liens externes.",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`AMP Most Watched Page Header I can see the branding 1`] = `"BBC News, Afrique"`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Accueil",
  "url": "/afrique",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "Afrique",
  "url": "/afrique/region",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Monde",
  "url": "/afrique/monde",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "Sports",
  "url": "/afrique/sports",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Economie",
  "url": "/afrique/topics/ca170ae3-99c1-48db-9b67-2866f85e7342",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Culture",
  "url": "/afrique/topics/6a73afa3-ea6b-45c1-80bb-49060b99f864",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "Au féminin",
  "url": "/afrique/38058576",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 8`] = `
Object {
  "text": "Technologie",
  "url": "/afrique/topics/31684f19-84d6-41f6-b033-7ae08098572a",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 9`] = `
Object {
  "text": "Santé",
  "url": "/afrique/topics/c4794229-7f87-43ce-ac0a-6cfcd6d3cef2",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 10`] = `
Object {
  "text": "Page en cours, Vidéos",
  "url": "/afrique/media/video",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 11`] = `
Object {
  "text": "Nos émissions",
  "url": "/afrique/nos_emissions/radio",
}
`;

exports[`AMP Most Watched Page I can see the list items 1`] = `"0:16Vidéo, Test asset, 0,1626 avril 2017"`;

exports[`AMP Most Watched Page I can see the list items 2`] = `"Audio, Gelila, miraculée des eaux 217 juin 2016"`;

exports[`AMP Most Watched Page I can see the list items 3`] = `"Audio, Gelila, miraculée des eaux17 juin 2016"`;

exports[`AMP Most Watched Page I can see the list items 4`] = `"0:16Vidéo, Test asset, 0,1626 avril 2017"`;

exports[`AMP Most Watched Page I can see the list items 5`] = `"Vidéo, Test 2 - Magari yasiyotumia mafuta yaanza kazi Kenya9 août 2016"`;

exports[`AMP Most Watched Page I can see the list items 6`] = `"Audio, L’invité BBC Afrique 21/06/2016 : Ibrahim Maïga short24 juin 2016"`;

exports[`AMP Most Watched Page Main heading should match text 1`] = `"Les plus vus"`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/afrique/images/icons/icon-192x192.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-72x72.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-96x96.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-128x128.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-144x144.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-152x152.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-180x180.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-192x192.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-384x384.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-512x512.png",
}
`;

exports[`AMP Most Watched Page SEO Canonical link 1`] = `"http://localhost:7080/afrique/media/video"`;

exports[`AMP Most Watched Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Most Watched Page SEO FB admins 1`] = `"100004154058350"`;

exports[`AMP Most Watched Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Most Watched Page SEO Heading level 1 1`] = `"Les plus vus"`;

exports[`AMP Most Watched Page SEO Lang attribute 1`] = `"fr"`;

exports[`AMP Most Watched Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png",
        "width": 1024,
      },
      "inLanguage": Object {
        "@type": "Language",
        "alternateName": "fr",
        "name": "French",
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/afrique/media/video",
        "@type": "WebPage",
        "name": "Les plus vus",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png",
          "width": 1024,
        },
        "name": "BBC News Afrique",
        "publishingPrinciples": "https://www.bbc.com/afrique/institutionelles-49283281",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png",
      "url": "http://localhost:7080/afrique/media/video",
    },
  ],
}
`;

exports[`AMP Most Watched Page SEO OG description 1`] = `"Les plus vus - BBC News Afrique"`;

exports[`AMP Most Watched Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"`;

exports[`AMP Most Watched Page SEO OG image alt 1`] = `"BBC News Afrique"`;

exports[`AMP Most Watched Page SEO OG locale 1`] = `"fr"`;

exports[`AMP Most Watched Page SEO OG site name 1`] = `"BBC News Afrique"`;

exports[`AMP Most Watched Page SEO OG title 1`] = `"Les plus vus - BBC News Afrique"`;

exports[`AMP Most Watched Page SEO OG type 1`] = `"website"`;

exports[`AMP Most Watched Page SEO OG url 1`] = `"http://localhost:7080/afrique/media/video"`;

exports[`AMP Most Watched Page SEO Page title 1`] = `"Les plus vus - BBC News Afrique"`;

exports[`AMP Most Watched Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`AMP Most Watched Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Most Watched Page SEO Twitter creator 1`] = `"@bbcafrique"`;

exports[`AMP Most Watched Page SEO Twitter description 1`] = `"Les plus vus - BBC News Afrique"`;

exports[`AMP Most Watched Page SEO Twitter image alt 1`] = `"BBC News Afrique"`;

exports[`AMP Most Watched Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"`;

exports[`AMP Most Watched Page SEO Twitter site 1`] = `"@bbcafrique"`;

exports[`AMP Most Watched Page SEO Twitter title 1`] = `"Les plus vus - BBC News Afrique"`;
